02 Source Code/de.tu_bs.cs.isf.familymining.ppu_iec.parser.ST/src-gen/de/tu_bs/cs/isf/familymining/ppu_iec/grammar/iecbase/IECBaseParser.java
// Generated from IECBase.g4 by ANTLR 4.7.1
package de.tu_bs.cs.isf.familymining.ppu_iec.grammar.iecbase;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IECBaseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, SINGLE_COMMENT=2, MULTI_COMMENT=3, TIME_OF_DAY_LITERAL=4, 
		DAYTIME_LITERAL=5, DURATION=6, INTERVAL=7, DAYS=8, HOURS=9, MINUTES=10, 
		SECONDS=11, MILLISECONDS=12, DATE_LITERAL=13, DATE_AND_TIME_LITERAL=14, 
		INTEGER_LITERAL=15, REAL_LITERAL=16, BOOLEAN_LITERAL=17, BIT_STRING_LITERAL=18, 
		DIRECT_VAR=19, SINGLE_BYTE_CHAR_STRING=20, DOUBLE_BYTE_CHAR_STRING=21, 
		SIGNED_INTEGER_TYPE_NAME=22, SINT=23, INT=24, DINT=25, LINT=26, UNSIGNED_INTEGER_TYPE_NAME=27, 
		USINT=28, UINT=29, UDINT=30, ULINT=31, REAL_TYPE_NAME=32, REAL=33, LREAL=34, 
		DATE_TYPE_NAME=35, DATE=36, TIME_OF_DAY=37, TOD=38, DATE_AND_TIME=39, 
		DT=40, BIT_STRING_TYPE_NAME=41, BOOL=42, BYTE=43, WORD=44, DWORD=45, LWORD=46, 
		WSTRING=47, STRING=48, DOT=49, COLON=50, SEMICOLON=51, COMMA=52, UNDERSCORE=53, 
		HASH=54, PLUS=55, MINUS=56, BAR=57, OR=58, XOR=59, NOT=60, LPARENT=61, 
		RPARENT=62, LSQR_BRACKET=63, RSQR_BRACKET=64, LCURLY_BRACKET=65, RCURLY_BRACKET=66, 
		LT=67, GT=68, EQUAL=69, UNEQUAL=70, ASSIGN=71, NIL=72, IDENTIFIER=73, 
		ENUMERATED_VALUE=74, INT_NUMBER=75;
	public static final int
		RULE_constant = 0, RULE_numeric_literal = 1, RULE_integer_literal = 2, 
		RULE_real_literal = 3, RULE_time_literal = 4, RULE_duration = 5, RULE_time_of_day = 6, 
		RULE_date = 7, RULE_date_and_time = 8, RULE_character_string = 9, RULE_single_byte_char_string = 10, 
		RULE_double_byte_char_string = 11, RULE_bit_string = 12, RULE_boolean_literal = 13, 
		RULE_subrange = 14, RULE_elem_type_name = 15, RULE_numeric_type_name = 16;
	public static final String[] ruleNames = {
		"constant", "numeric_literal", "integer_literal", "real_literal", "time_literal", 
		"duration", "time_of_day", "date", "date_and_time", "character_string", 
		"single_byte_char_string", "double_byte_char_string", "bit_string", "boolean_literal", 
		"subrange", "elem_type_name", "numeric_type_name"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "'SINT'", 
		"'INT'", "'DINT'", "'LINT'", null, "'USINT'", "'UINT'", "'UDINT'", "'ULINT'", 
		null, "'REAL'", "'LREAL'", null, "'DATE'", "'TIME_OF_DAY'", "'TOD'", "'DATE_AND_TIME'", 
		"'DT'", null, "'BOOL'", "'BYTE'", "'WORD'", "'DWORD'", "'LWORD'", "'WSTRING'", 
		"'STRING'", "'.'", "':'", "';'", "','", "'_'", "'#'", "'+'", "'-'", "'|'", 
		"'OR'", "'XOR'", "'NOT'", "'('", "')'", "'['", "']'", "'{'", "'}'", null, 
		null, "'='", "'<>'", "':='", "'NIL'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "SINGLE_COMMENT", "MULTI_COMMENT", "TIME_OF_DAY_LITERAL", 
		"DAYTIME_LITERAL", "DURATION", "INTERVAL", "DAYS", "HOURS", "MINUTES", 
		"SECONDS", "MILLISECONDS", "DATE_LITERAL", "DATE_AND_TIME_LITERAL", "INTEGER_LITERAL", 
		"REAL_LITERAL", "BOOLEAN_LITERAL", "BIT_STRING_LITERAL", "DIRECT_VAR", 
		"SINGLE_BYTE_CHAR_STRING", "DOUBLE_BYTE_CHAR_STRING", "SIGNED_INTEGER_TYPE_NAME", 
		"SINT", "INT", "DINT", "LINT", "UNSIGNED_INTEGER_TYPE_NAME", "USINT", 
		"UINT", "UDINT", "ULINT", "REAL_TYPE_NAME", "REAL", "LREAL", "DATE_TYPE_NAME", 
		"DATE", "TIME_OF_DAY", "TOD", "DATE_AND_TIME", "DT", "BIT_STRING_TYPE_NAME", 
		"BOOL", "BYTE", "WORD", "DWORD", "LWORD", "WSTRING", "STRING", "DOT", 
		"COLON", "SEMICOLON", "COMMA", "UNDERSCORE", "HASH", "PLUS", "MINUS", 
		"BAR", "OR", "XOR", "NOT", "LPARENT", "RPARENT", "LSQR_BRACKET", "RSQR_BRACKET", 
		"LCURLY_BRACKET", "RCURLY_BRACKET", "LT", "GT", "EQUAL", "UNEQUAL", "ASSIGN", 
		"NIL", "IDENTIFIER", "ENUMERATED_VALUE", "INT_NUMBER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "IECBase.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IECBaseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ConstantContext extends ParserRuleContext {
		public Numeric_literalContext numeric_literal() {
			return getRuleContext(Numeric_literalContext.class,0);
		}
		public Character_stringContext character_string() {
			return getRuleContext(Character_stringContext.class,0);
		}
		public Time_literalContext time_literal() {
			return getRuleContext(Time_literalContext.class,0);
		}
		public Bit_stringContext bit_string() {
			return getRuleContext(Bit_stringContext.class,0);
		}
		public Boolean_literalContext boolean_literal() {
			return getRuleContext(Boolean_literalContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitConstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_constant);
		try {
			setState(39);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_LITERAL:
			case REAL_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(34);
				numeric_literal();
				}
				break;
			case SINGLE_BYTE_CHAR_STRING:
			case DOUBLE_BYTE_CHAR_STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(35);
				character_string();
				}
				break;
			case TIME_OF_DAY_LITERAL:
			case DURATION:
			case DATE_LITERAL:
			case DATE_AND_TIME_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(36);
				time_literal();
				}
				break;
			case BIT_STRING_LITERAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(37);
				bit_string();
				}
				break;
			case BOOLEAN_LITERAL:
				enterOuterAlt(_localctx, 5);
				{
				setState(38);
				boolean_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numeric_literalContext extends ParserRuleContext {
		public Integer_literalContext integer_literal() {
			return getRuleContext(Integer_literalContext.class,0);
		}
		public Real_literalContext real_literal() {
			return getRuleContext(Real_literalContext.class,0);
		}
		public Numeric_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numeric_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterNumeric_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitNumeric_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitNumeric_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Numeric_literalContext numeric_literal() throws RecognitionException {
		Numeric_literalContext _localctx = new Numeric_literalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_numeric_literal);
		try {
			setState(43);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTEGER_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(41);
				integer_literal();
				}
				break;
			case REAL_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(42);
				real_literal();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Integer_literalContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(IECBaseParser.INTEGER_LITERAL, 0); }
		public Integer_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterInteger_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitInteger_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitInteger_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Integer_literalContext integer_literal() throws RecognitionException {
		Integer_literalContext _localctx = new Integer_literalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_integer_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(INTEGER_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Real_literalContext extends ParserRuleContext {
		public TerminalNode REAL_LITERAL() { return getToken(IECBaseParser.REAL_LITERAL, 0); }
		public Real_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_real_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterReal_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitReal_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitReal_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Real_literalContext real_literal() throws RecognitionException {
		Real_literalContext _localctx = new Real_literalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_real_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(REAL_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Time_literalContext extends ParserRuleContext {
		public DurationContext duration() {
			return getRuleContext(DurationContext.class,0);
		}
		public Time_of_dayContext time_of_day() {
			return getRuleContext(Time_of_dayContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public Date_and_timeContext date_and_time() {
			return getRuleContext(Date_and_timeContext.class,0);
		}
		public Time_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterTime_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitTime_literal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitTime_literal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Time_literalContext time_literal() throws RecognitionException {
		Time_literalContext _localctx = new Time_literalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_time_literal);
		try {
			setState(53);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DURATION:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				duration();
				}
				break;
			case TIME_OF_DAY_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				time_of_day();
				}
				break;
			case DATE_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(51);
				date();
				}
				break;
			case DATE_AND_TIME_LITERAL:
				enterOuterAlt(_localctx, 4);
				{
				setState(52);
				date_and_time();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DurationContext extends ParserRuleContext {
		public TerminalNode DURATION() { return getToken(IECBaseParser.DURATION, 0); }
		public DurationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_duration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterDuration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitDuration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitDuration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DurationContext duration() throws RecognitionException {
		DurationContext _localctx = new DurationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_duration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(DURATION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Time_of_dayContext extends ParserRuleContext {
		public TerminalNode TIME_OF_DAY_LITERAL() { return getToken(IECBaseParser.TIME_OF_DAY_LITERAL, 0); }
		public Time_of_dayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time_of_day; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).enterTime_of_day(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IECBaseListener ) ((IECBaseListener)listener).exitTime_of_day(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IECBaseVisitor ) return ((IECBaseVisitor<? extends T>)visitor).visitTime_of_day(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Time_of_dayContext time_of_day() throws RecognitionException {
		Time_of_dayContext _localctx = new Time_of_dayContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_time_of_day);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(TIME_OF_DAY_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
